Element spacing fixed

--- a/scss-&-css/style.scss
+++ b/scss-&-css/style.scss
@@ -271,7 +271,6 @@ a {
 // :::::::::: HERO :::::::::::::::::
 // :::::::::::::::::::::::::::::::::
 #previous-work {
-    margin: 20vh 0 0 0;
     h5 {
         color: $blink_quick-silver;
     }
